--- a/Front-end/Funcionarios/estilos/dashBoard.css
+++ b/Front-end/Funcionarios/estilos/dashBoard.css
@@ -57,69 +57,22 @@
 
 .caixa-centro{
     margin-left: 20%;
-    margin-top: -18.5%;
+    margin-top: -32.5%;
     width: 78%;
-    height: 70%;
-    background: #c4c4c4;
+    height: 95%;
+    background: #8C8686;
     border-radius: 25px;
     
-}
-
-
-.caixa-meio{
-    margin-left: 25%;
-    margin-top: -15%;
-    width: 78%;
-    height: 70%;
-    background: #c4c4c4;
-    border-radius: 25px;
-    
-}
-
-.caixa-direita{
-    
-    margin-left: 30%;
-    margin-top: -20%;
-    width: 100%;
-    height: 70%;
-    background: #c4c4c4;
-    border-radius: 25px;
-    
-}
-
-.campo-field{
-    border-radius: 20px;
-    width: 40%;
-    height: 110%; 
-    margin-left: 0%;
-    outline: none;
-    font-family: 'Baloo 2', cursive;
-    font-style: normal;
-    font-weight: bolder;
-    font-size: 30px;
-    
-
-}
-
-.campos{
-    margin-left: 0;
-    
-    height: 5%;
-    background: white;
-    border-radius: 25px;
-    outline: none;
 }
 
 .barra-lateral{
     margin-left: 1%;
     margin-top: 1%;
     width: 17%;
-    height: 50%;
+    height: 88%;
     background: #c4c4c4;
     border-radius: 25px;
 }
-
-
 
 .botoes-lateral{
     border-radius: 20px;
@@ -144,18 +97,18 @@ button:hover{
 
 
 
-.botao-centro{
-    border-radius: 25px;
-    width: 30%;
-    height: 35%;
-    margin-top: 20%;
-    margin-left: 110%;
+.cadastrar{
+    border-radius: 20px;
+    width: 75%;
+    height: 50px;
+    margin-top: 40%;
+    margin-left: 15%;
     background: white;
     outline: none;
 
     font-family: 'Baloo 2', cursive;
     font-style: normal;
     font-weight: bolder;
-    font-size: 22px;
+    font-size: 18px;
 
 }
