--- a/Front-end/src/Servicos/estilos/dashBoard.css
+++ b/Front-end/src/Servicos/estilos/dashBoard.css
@@ -112,3 +112,14 @@ button:hover{
     font-size: 18px;
 
 }
+
+.servicos{
+    margin-top: 5%;
+   margin-left: 30%;
+    font-family: 'Baloo 2', cursive;
+    font-style: normal;
+    font-weight: bolder;
+    font-size: 20px;
+    color: black;
+
+}
